# ecrVulnToJiraTicket

./: README.md  Severity.py  Vulnerabilities.py  Vulnerability.py  VulnerableRepository.py  improvements.md  jira_vulnerabilities.py  pyproject.toml
